@@ -362,7 +362,7 @@ w_strptime_internal (wchar_t *rp, const wchar_t *fmt, stm *tm,
 	  break;
 	case L'j':
 	  /* Match day number of year.  */
-	  get_number (1, 366, 3);
+	  get_number (1, 366, 3); // NB: 366 would be invalid in most years
 	  tm->tm_yday = val - 1;
 	  have_yday = 1;
 	  break;
@@ -635,13 +635,18 @@ w_strptime_internal (wchar_t *rp, const wchar_t *fmt, stm *tm,
 
     if (want_xday && !have_wday) {
 	if ( !(have_mon && have_mday) && have_yday)  {
+	    /* have_yday, so this must have come from %j */
 	    /* We don't have tm_mon and/or tm_mday, compute them. */
 	    int t_mon = 0;
 	    int yr = 1900 + tm->tm_year;
-	    if(tm->tm_yday > (__isleap(yr) ? 365 : 364))
-		error("(0-based) yday %d in year %d is invalid\n", tm->tm_yday, yr);
-	    while (__mon_yday[__isleap(yr)][t_mon] <= tm->tm_yday)
-		t_mon++;
+	    if(tm->tm_yday > (__isleap(yr) ? 365 : 364)) {
+		warning("day-of-year %d in year %d is invalid\n",
+			tm->tm_yday+1, yr);
+		t_mon = -1;
+	    } else {
+		while (__mon_yday[__isleap(yr)][t_mon] <= tm->tm_yday)
+		    t_mon++;
+	    }
 	    if (!have_mon)
 		tm->tm_mon = t_mon - 1;
 	    if (!have_mday)
@@ -668,6 +673,8 @@ w_strptime_internal (wchar_t *rp, const wchar_t *fmt, stm *tm,
 	  tm->tm_mon = save_mon;
 
       if (!have_yday) {
+	  // Get yday from week and day-of-the-week.
+	  // This does not validate yday against any upper limit
 	  tm->tm_yday = ((7 - (tm->tm_wday - w_offset)) % 7
 			 + (week_no - 1) *7
 			 + save_wday - w_offset);
@@ -678,16 +685,19 @@ w_strptime_internal (wchar_t *rp, const wchar_t *fmt, stm *tm,
       {
 	  int t_mon = 0;
 	  int yr = 1900 + tm->tm_year;
-	  if(tm->tm_yday > (__isleap(yr) ? 365 : 364))
-	      error("(0-based) yday %d in year %d is invalid\n", tm->tm_yday, yr);
-	  while (__mon_yday[__isleap(yr)][t_mon] <= tm->tm_yday)
-	      t_mon++;
+	  if(tm->tm_yday > (__isleap(yr) ? 365 : 364)) {
+	      warning("(0-based) yday %d in year %d is invalid\n",
+		      tm->tm_yday, yr);
+	      t_mon = -1;
+	  } else {
+	      while (__mon_yday[__isleap(yr)][t_mon] <= tm->tm_yday)
+		  t_mon++;
+	  }
 	  if (!have_mon)
 	      tm->tm_mon = t_mon - 1;
 	  if (!have_mday)
 	      tm->tm_mday =
-		  (tm->tm_yday
-		   - __mon_yday[__isleap(yr)][t_mon - 1] + 1);
+		  (tm->tm_yday - __mon_yday[__isleap(yr)][t_mon - 1] + 1);
       }
 
       tm->tm_wday = save_wday;
@@ -1107,13 +1117,18 @@ strptime_internal (const char *rp, const char *fmt, stm *tm,
 
     if (want_xday && !have_wday) {
 	if ( !(have_mon && have_mday) && have_yday)  {
+	    /* have_yday, so this must have come from %j */
 	    /* We don't have tm_mon and/or tm_mday, compute them. */
 	    int t_mon = 0;
 	    int yr = 1900 + tm->tm_year;	    
-	    if(tm->tm_yday > (__isleap(yr) ? 365 : 364))
-		error("(0-based) yday %d in year %d is invalid\n", tm->tm_yday, yr);
-	    while (__mon_yday[__isleap(yr)][t_mon] <= tm->tm_yday)
-		t_mon++;
+	    if(tm->tm_yday > (__isleap(yr) ? 365 : 364)) {
+		warning("day-of-year %d in year %d is invalid\n",
+			tm->tm_yday+1, yr);
+		t_mon = -1;
+	    } else {
+		while (__mon_yday[__isleap(yr)][t_mon] <= tm->tm_yday)
+		    t_mon++;
+	    }
 	    if (!have_mon)
 		tm->tm_mon = t_mon - 1;
 	    if (!have_mday)
@@ -1148,17 +1163,19 @@ strptime_internal (const char *rp, const char *fmt, stm *tm,
       {
 	  int t_mon = 0;
 	  int yr = 1900 + tm->tm_year;
-	  if(tm->tm_yday > (__isleap(yr) ? 365 : 364))
-	      error("(0-based)  yday %d in year %d is invalid\n", tm->tm_yday, yr);
-	  while (__mon_yday[__isleap(yr)][t_mon]
-		 <= tm->tm_yday)
-	      t_mon++;
+	  if(tm->tm_yday > (__isleap(yr) ? 365 : 364)) {
+		warning("(0-based) yday %d in year %d is invalid\n",
+			tm->tm_yday, yr);
+		t_mon = -1;
+	  } else {
+	      while (__mon_yday[__isleap(yr)][t_mon] <= tm->tm_yday)
+		  t_mon++;
+	  }
 	  if (!have_mon)
 	      tm->tm_mon = t_mon - 1;
 	  if (!have_mday)
 	      tm->tm_mday =
-		  (tm->tm_yday
-		   - __mon_yday[__isleap(yr)][t_mon - 1] + 1);
+		  (tm->tm_yday - __mon_yday[__isleap(yr)][t_mon - 1] + 1);
       }
 
       tm->tm_wday = save_wday;
